tree-sitter-revl/grammar.js
    source_file: ($) => repeat($._declaration),

    _declaration: ($) =>
      choice(
        $.use_declaration,
        $.service_declaration,
        $.component_declaration,
        $.type_declaration,
        $.function_declaration,
        $.extern_declaration,
        $.test_declaration,
        $.fault_test_declaration,
        $.prop_test_declaration,
      ),

    // ---------------------------------------------------------------- use

    service_declaration: ($) =>
      seq(
        optional('pub'),
        optional('commutative'),
        'service',
        field('name', $.identifier),
        field('body', $.service_body),
      ),

    service_body: ($) => seq('{', repeat($.method_signature), '}'),

    method_signature: ($) =>
      seq(
        repeat($.method_modifier),
        'fn',
        field('name', $.identifier),
        field('parameters', $.typed_parameters),
        optional(seq('->', field('return_type', $._type))),
      ),

    method_modifier: ($) =>
      choice(
        seq('emission', optional($.capability_list)),
        'async',
        'commutative',
      ),

    // A capability set: `[net]`, `[net(requests=100)]`, `[fs.write(path="/tmp")]`,
    // `[fs, shell]`. Each capability is a dotted name with an optional
    // parameter list of `key = <literal>` (or bare) arguments (items 260/296).
    capability_list: ($) => seq('[', commaSep1NoTrail($.capability), ']'),

    capability: ($) =>
      seq(
        field('name', $.capability_name),
        optional(field('parameters', $.capability_parameters)),
      ),

    capability_name: ($) =>
      seq($.identifier, repeat(seq('.', $.identifier))),

    capability_parameters: ($) => seq('(', commaSep($.capability_parameter), ')'),

    capability_parameter: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq('=', field('value', $._literal))),
      ),

    typed_parameters: ($) => seq('(', commaSep($.typed_parameter), ')'),

    typed_parameter: ($) =>
      seq(field('name', $.identifier), ':', field('type', $._type)),

    // ---------------------------------------------------------- component

    component_declaration: ($) =>
      seq(
        optional('boot'),
        'component',
        field('name', $.identifier),
        repeat(choice($.requires_clause, $.provides_clause)),
        field('body', $.component_body),
      ),

    requires_clause: ($) => seq('requires', commaSep1NoTrail($.binding)),
    provides_clause: ($) => seq('provides', commaSep1NoTrail($.binding)),

    binding: ($) =>
      seq(field('local', $.identifier), ':', field('service', $.identifier)),

    component_body: ($) =>
      seq('{', repeat(choice($.config_block, $._statement)), '}'),

    config_block: ($) => seq('config', '{', commaSep($.config_field), '}'),

    config_field: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(field('bound', $.config_bound)),
        optional(seq('=', field('default', $._literal))),
      ),

    // The optional admission bound on a `boot component` config field
    // (item 350): `under "<prefix>"` (a confined path) or `in [lit, ...]`
    // (an enumerated set). The reference restricts it to boot components at
    // parse time — a context-sensitive rule not expressible here.
    config_bound: ($) =>
      choice(
        seq('under', field('prefix', $.string)),
        seq('in', field('values', $.list_literal)),
      ),

    // --------------------------------------------------------------- type

    type_declaration: ($) =>
      seq(
        optional('pub'),
        'type',
        field('name', $.identifier),
        optional($.type_parameters),
        '=',
        field('value', choice($.record_type, $.variant_type, $.type_alias)),
      ),

    variant_type: ($) => seq($.variant_case, repeat1(seq('|', $.variant_case))),

    variant_case: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq('(', field('payload', $._type), ')')),
      ),

    extern_declaration: ($) =>
      seq(
        optional('pub'),
        'extern',
        repeat($.extern_modifier),
        'fn',
        field('name', $.identifier),
        optional($.type_parameters),
        field('parameters', $.typed_parameters),
        optional(seq('->', field('return_type', $._type))),
        optional(seq('undo', field('undo', $._expression))),
        optional(seq('compensate', field('compensate', $._expression))),
        repeat1(seq('=', $.host_block)),
      ),

    // An extern's classification/colour prelude: `pure` / `acquire` /
    // `emission[caps]?` plus an optional `async` colour, in any order
    // (`extern emission async fn …`, `extern pure fn …`).
    extern_modifier: ($) =>
      choice(
        'pure',
        'acquire',
        'async',
        seq('emission', optional($.capability_list)),
      ),

    host_block: ($) =>
      seq('@', field('backend', $.identifier), alias($._host_body, $.host_body)),

    // ----------------------------------------------------------- function

    function_declaration: ($) =>
      seq(
        optional('pub'),
        optional('verified'),
        'fn',
        field('name', $.identifier),
        optional($.type_parameters),
        field('parameters', $.typed_parameters),
        optional(seq('->', field('return_type', $._type))),
        field('body', $.block),
      ),

    // -------------------------------------------------------------- tests

    test_declaration: ($) =>
      seq(
        optional('lifecycle'),
        'test',
        field('name', $.string),
        field('body', $.test_body),
      ),

    // A test body accepts both pure statements and the lifecycle-test
    // statements (load / unload / call / swap). The reference restricts the
    // latter to `lifecycle test` bodies; that is a context-sensitive rule.
    test_body: ($) =>
      seq('{', repeat(choice($._lifecycle_statement, $._statement)), '}'),

    // `prop test "name" (p: T, …) { assert … }` — property test with
    // type-derived generated inputs (item 37). The parameter list is a `fn`
    // parameter list; the body is the pure statement grammar a plain test uses.
    prop_test_declaration: ($) =>
      seq(
        'prop',
        'test',
        field('name', $.string),
        field('parameters', $.typed_parameters),
        field('body', $.block),
      ),

    block: ($) => seq('{', repeat($._statement), '}'),

    _statement: ($) =>
      choice(
        $.let_statement,
        $.bound_call,
        $.assignment_statement,
        $.return_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.assert_statement,
        $.effect_statement,
        $.emit_statement,
        $.fail_statement,
        $.await_statement,
        $.isolate_statement,
        $.intercept_statement,
        $.provide_statement,
        $.handoff_statement,
        $.timer_statement,
        $.expression_statement,
      ),

    _lifecycle_statement: ($) =>
      choice(
        $.load_statement,
        $.unload_statement,
        $.call_statement,
        $.advance_statement,
      ),

    // `handoff <key>: <Type>` — the verified state hand-off prelude of a
    // stateful component (item 53). A component prelude declaration, refused
    // inside a method body by the reference (a context-sensitive rule).
    handoff_statement: ($) =>
      seq('handoff', field('key', $.identifier), ':', field('type', $._type)),

    // `every <dur> { emit … }` (periodic) / `after <dur> { emit … }` (one-shot).
    // The delay is `<int><unit>` (`30s`, `5m`, `250ms`); the body is emissions.
    // (item 57, docs/time-coeffect.md)
    timer_statement: ($) =>
      seq(
        field('mode', choice('every', 'after')),
        field('interval', $.duration),
        field('body', $.timer_body),
      ),

    timer_body: ($) => seq('{', repeat($.emit_statement), '}'),

    // A duration literal — the reference lexer has no duration token, so `30s`
    // is an integer immediately followed by a bare unit ident (ms|s|m|h|d).
    duration: ($) =>
      seq(field('count', $.integer), field('unit', alias($.identifier, $.time_unit))),

    // `advance <dur>` — drive the deterministic test clock forward, the one
    // lifecycle statement that takes a duration (item 102).
    advance_statement: ($) => seq('advance', field('interval', $.duration)),

    let_statement: ($) =>
      seq(
        choice('let', 'var'),
        field('binding', choice($.identifier, $.record_pattern, $.list_pattern)),
        optional(seq(':', field('type', $._type))),
        '=',
        field('value', choice($.effect_expression, $.emit_expression, $._expression)),
      ),

    return_statement: ($) => prec.right(seq('return', optional($._expression))),

    assert_statement: ($) => seq('assert', $._expression),

    effect_expression: ($) =>
      seq(
        'effect',
        optional('await'),
        choice($.spawn_expression, $.effect_block, $._expression),
        optional(seq('undo', field('undo', $._expression))),
      ),

    emit_statement: ($) =>
      prec.right(
        seq('emit', $._expression, optional(seq('compensate', field('compensate', $._expression)))),
      ),

    provide_statement: ($) =>
      seq('provide', field('key', $.identifier), '{', repeat($.provide_method), '}'),

    provide_method: ($) =>
      seq(
        optional('async'),
        'fn',
        field('name', $.identifier),
        field('parameters', $.parameters),
        optional(seq('->', field('return_type', $._type))),
        choice(
          seq('=', field('body', choice($.emit_expression, $._expression))),
          field('body', $.block),
        ),
      ),

    // provide-method / arrow parameters: names with OPTIONAL type annotations
    parameters: ($) => seq('(', commaSep($.parameter), ')'),
    parameter: ($) =>
      seq(field('name', $.identifier), optional(seq(':', field('type', $._type)))),

    // lifecycle-test statements
    load_statement: ($) =>
      seq('load', field('component', $.identifier), optional(seq('with', $.config_arguments))),

    _expression: ($) =>
      choice(
        $.identifier,
        $.config,
        $.integer,
        $.float,
        $.string,
        $.template_string,
        $.boolean,
        $.null,
        $.hole,
        $.record_literal,
        $.record_update,
        $.list_literal,
        $.match_expression,
        $.arrow_function,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.ternary_expression,
        $.call_expression,
        $.member_expression,
        $.optional_member_expression,
        $.index_expression,
      ),

    parenthesized_expression: ($) => seq('(', $._expression, ')'),

    unary_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(field('operator', choice('!', '-', '~')), field('operand', $._expression)),
      ),

    // `emit <call>` in value position (parser.py EmitExpr): the value of an
    // irreversible call, e.g. `fn record(line) = emit append_line(...)`. Kept
    // out of the general expression set so `emit` at statement position is
    // unambiguously an emit_statement.
    binary_expression: ($) => {
      const table = [
        ['||', PREC.or],
        ['??', PREC.nullish],
        ['&&', PREC.and],
        ['|', PREC.bitwise_or],
        ['^', PREC.bitwise_xor],
        ['&', PREC.bitwise_and],
        ['==', PREC.equality],
        ['===', PREC.equality],
        ['!=', PREC.equality],
        ['!==', PREC.equality],
        ['<', PREC.comparison],
        ['>', PREC.comparison],
        ['<=', PREC.comparison],
        ['>=', PREC.comparison],
        ['<<', PREC.shift],
        ['>>', PREC.shift],
        ['+', PREC.additive],
        ['-', PREC.additive],
        ['*', PREC.multiplicative],
        ['/', PREC.multiplicative],
        ['%', PREC.multiplicative],
      ];
      return choice(
        ...table.map(([op, p]) => {
          const assoc = op === '??' ? prec.right : prec.left;
          return assoc(
            p,
            seq(
              field('left', $._expression),
              field('operator', op),
              field('right', $._expression),
            ),
          );
        }),
      );
    },

    call_expression: ($) =>
      prec(PREC.postfix, seq(field('function', $._expression), field('arguments', $.arguments))),

    arguments: ($) => seq('(', commaSep($._expression), ')'),

    member_expression: ($) =>
      prec(PREC.postfix, seq(field('object', $._expression), '.', field('property', $.identifier))),

    arrow_function: ($) =>
      prec.right(
        -1,
        seq(
          field('parameters', choice($.identifier, $.parameters)),
          optional(seq(':', field('return_type', $._type))),
          '=>',
          field('body', choice($.block, $.emit_expression, $._expression)),
        ),
      ),

    record_literal: ($) => seq('{', commaSep($.record_entry), '}'),
    record_entry: ($) =>
      seq(field('name', $.identifier), ':', field('value', $._expression)),

    // Functional record update: `{ base | field = expr, … }` (item 382). The
    // base is any expression; each entry replaces one field by name.
    record_update: ($) =>
      seq(
        '{',
        field('base', $._expression),
        '|',
        commaSep1($.record_update_entry),
        '}',
      ),

    record_update_entry: ($) =>
      seq(field('name', $.identifier), '=', field('value', $._expression)),

    list_literal: ($) => seq('[', commaSep($._expression), ']'),

    match_expression: ($) =>
      seq('match', field('value', $._expression), '{', commaSep($.match_arm), '}'),

    match_arm: ($) =>
      seq(field('pattern', $.match_pattern), '=>', field('value', $._expression)),

    match_pattern: ($) =>
      seq(field('case', $.identifier), optional(seq('(', field('binding', $.identifier), ')'))),

    _type: ($) => choice($._type_no_opt, $.optional_type),

    type_identifier: ($) => $.identifier,

    generic_type: ($) =>
      seq(field('name', $.identifier), '[', commaSep1NoTrail($._type), ']'),

    _literal: ($) =>
      choice($.integer, $.float, $.string, $.boolean, $.null, $.negative_number),

    integer: ($) =>
      token(
        choice(
          /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
          /0[bB][01][01_]*/,
          /0[oO][0-7][0-7_]*/,
          /\d[\d_]*/,
        ),
      ),
    string: ($) =>
      token(
        choice(
          seq('"""', repeat(choice(/[^"\\]/, /"[^"]/, /""[^"]/, /\\./)), '"""'),
          seq('"', repeat(choice(/[^"\\\n]/, /\\./)), '"'),
          seq("'", repeat(choice(/[^'\\\n]/, /\\./)), "'"),
        ),
      ),

    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});
